--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -62,10 +62,11 @@ map di shell trash-put %s || trash-put %f
 # default ud is a duplicate of uy
 map ud shell trash-restore
 
-# see ~/bin/bgset; wrapper for setroot
-map cb shell bgset -z %d/%f
-# change wallpaper and store
-map cw shell bgset --store -z %f
+# just change wallpaper; ~/bin/bgset
+map cb shell bgset -z %d/%f &> /dev/null &
+# change and store wallpaper and set theme with wal; see ~/bin/walset
+# nohup because walset command will mess up input otherwise
+map cw shell nohup walset --store -z %f &> /dev/null &
 
 # image magick
 # change rotation; image rotate with imagemagick
