--- a/terminal/.config/kitty/kitty.conf
+++ b/terminal/.config/kitty/kitty.conf
@@ -15,6 +15,7 @@ font_family Fura Code Nerd Font
 font_size 10
 
 # ** Colorscheme
+# *** Default
 background #1d282c
 foreground #2B81A6
 
@@ -49,6 +50,10 @@ color14 #93e0e3
 # white
 color7 #dcdccc
 color15 #ffffff
+
+# *** Pywal
+# fine if file doesn't exist
+include ~/.cache/wal/colors-kitty.conf
 
 # * Scrollback
 # TODO use?
