--- a/terminal/.tmux.conf
+++ b/terminal/.tmux.conf
@@ -57,8 +57,10 @@ set -g visual-activity off
 # lower time messages stay in status bar
 set -g display-time 2000
 
-# theme
-source ~/.tmuxline
+# simple theme that uses terminal colors
+set -g @plugin 'arcticicestudio/nord-tmux'
+# no powerline symbols; just rectangles
+set -g @nord_tmux_no_patched_font "1"
 
 # * Window/Pane Settings
 # send keystrokes to other panes
