Ranger - Use ueberzug image preview method

--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -39,6 +39,7 @@ set preview_images true
 # doesn't work in tmux
 # set preview_images_method kitty
 # set preview_images_method pqiv
+set preview_images_method ueberzug
 
 # open all images in folder with image viewer when none selected
 # opens in ranger order but doesn't work if thousands of images in folder
