--- a/root/boot/efi/EFI/refind/refind.conf
+++ b/root/boot/efi/EFI/refind/refind.conf
@@ -8,35 +8,37 @@ timeout 20
 scanfor manual,internal
 
 menuentry "Arch Linux CK" {
-	icon     /EFI/refind/icons/os_arch.png
-	# label
-	volume   boot
-	# these are relative to the volume! (actually /boot/vmlinuz...)
-	loader   /vmlinuz-linux-ck-skylake
-	initrd   /initramfs-linux-ck-skylake-custom.img
-	# scsi_mod.use_blk_mq=1 needed for scsi and sata drives now for bfq
-	# elevator=bfq does not work anymore; need udev rule
-	# https://wiki.archlinux.org/index.php/Silent_boot
-	# cryptdevice=LABEL=cryptlinux (requires systemd-git)
-	options  "cryptdevice=UUID=a2220ef6-6250-4426-96d4-ae19d61fce88:cryptlinux:allow-discards resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
+    icon     /EFI/refind/icons/os_arch.png
+    # label
+    volume   boot
+    # these are relative to the volume! (actually /boot/vmlinuz...)
+    loader   /vmlinuz-linux-ck
+    initrd   /initramfs-linux-ck-custom.img
+    # scsi_mod.use_blk_mq=1 needed for scsi and sata drives now for bfq
+    # elevator=bfq does not work anymore; need udev rule
+    # https://wiki.archlinux.org/index.php/Silent_boot
+    # cryptdevice=LABEL=cryptlinux (requires systemd-git)
+    options  "cryptdevice=LABEL=cryptlinux:cryptlinux:allow-discards resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
 
-	submenuentry "Boot using fallback initramfs" {
-		initrd /initramfs-linux-ck-custom-fallback.img
-	}
-	submenuentry "Boot using systemd initramfs" {
-		initrd /initramfs-linux-ck-skylake-custom-systemd.img
-		options  "rd.luks.uuid=a2220ef6-6250-4426-96d4-ae19d61fce88:cryptlinux rd.luks.options=discard resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
-	}
-	submenuentry "Boot using fallback systemd initramfs" {
-		initrd /initramfs-linux-ck-skylake-custom-systemd-fallback.img
-		options  "rd.luks.uuid=a2220ef6-6250-4426-96d4-ae19d61fce88:cryptlinux rd.luks.options=discard resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
-	}
-	submenuentry "Boot using default linux" {
-		loader /vmlinuz-linux
-		initrd /initramfs-linux-ck-skylake-custom-vanilla.img
-	}
-	submenuentry "Boot using fallback default linux" {
-		loader /vmlinuz-linux
-		initrd /initramfs-linux-ck-skylake-custom-vanilla-fallback.img
-	}
+    submenuentry "Boot using fallback initramfs" {
+        initrd /initramfs-linux-ck-custom-fallback.img
+    }
+
+    # submenuentry "Boot using systemd initramfs" {
+    #     initrd /initramfs-linux-ck-custom-systemd.img
+    #     options  "rd.luks.uuid=<uuid>:cryptlinux rd.luks.options=discard resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
+    # }
+    # submenuentry "Boot using fallback systemd initramfs" {
+    #     initrd /initramfs-linux-ck-custom-systemd-fallback.img
+    #     options  "rd.luks.uuid=<uuid>:cryptlinux rd.luks.options=discard resume=/dev/cryptlinux_group/swap root=/dev/cryptlinux_group/root rw rootflags=noatime scsi_mod.use_blk_mq=y quiet vga=current nosplash initrd=/intel-ucode.img"
+    # }
+
+    submenuentry "Boot using default linux" {
+        loader /vmlinuz-linux
+        initrd /initramfs-linux-ck-skylake-custom-vanilla.img
+    }
+    submenuentry "Boot using fallback default linux" {
+        loader /vmlinuz-linux
+        initrd /initramfs-linux-ck-skylake-custom-vanilla-fallback.img
+    }
 }
