Post Install Script Improvements
- Use yay instead of aura (aura-bin does not have some important fixes; e.g.
 have to use -Ax to prevent hanging: https://github.com/aurapm/aura/issues/468;
 aura claims some valid aur packages are not aur packages)
- Run pacman -Syu before installing powerpill so xyne repo is in the package
  database
- Don't require confirmation for installing yay-bin (previously aura-bin)
- Use realpath when getting directory script is in (otherwise a call like
  "./post-install" will not work)
- Specify --builduser to aura since don't want to (and now cannot) build as
  root; replaced with running yay as a user who can execute pacman without a
  password
- Use mountpoint command to check if /boot/efi is a mountpoint (could be empty
  on fresh install)
- Use basedir of the script instead of uhome/dotfiles/... where it makes sense
- Add argument parsing for changing variables
- Add option to change salt log level
- Add option to set timeout for package installation (handles aura hanging)
- Add help text for available options
- Don't set environment variables for HOME and USER for extra-setup functions;
  pass in as arguments
- Remove services.sls (wasn't using and won't use in the future)
- Remove dnscrypt user from users.sls and rename user_groups.sls
- Don't run systemctl commands in chroot
- Remove sleeps
- Send all output to log.txt (since may not have scrollback)
- Stop using set -e (helped with debugging initially, but causes more issues
  than is worth; ran into several annoyances; see
  http://mywiki.wooledge.org/BashFAQ/105)
- Generally prefer longopts
- Add option to not use salt (just bash); make default; there has been some
  failure with salt every time I've tried to use this script (not necessarily a
  problem with salt, but it adds a lot of extra complication to a script that
  should be as basic as possible with as few major dependencies as possible;
  last time had issues getting salt installed; this time it crashed my laptop
  wit

--- a/root/etc/pacman.conf
+++ b/root/etc/pacman.conf
@@ -90,7 +90,8 @@ Include = /etc/pacman.d/mirrorlist
 # Packages for the "x86_64" architecture.
 # Note that this includes all packages in [xyne-any].
 SigLevel = Required
-Server = https://xyne.archlinux.ca/repos/xyne
+# Server = https://xyne.archlinux.ca/repos/xyne
+Server = https://xyne.archlinux.ca/bin/repo.php?file=
 
 [repo-ck]
 Server = http://repo-ck.com/$arch
