--- a/root/etc/systemd/system/dnscrypt-proxy.socket.d/override.conf
+++ b/root/etc/systemd/system/dnscrypt-proxy.socket.d/override.conf
@@ -4,4 +4,6 @@
 ListenStream=
 ListenDatagram=
 ListenStream=127.0.0.1:53000
+ListenStream=[::1]:53000
 ListenDatagram=127.0.0.1:53000
+ListenDatagram=[::1]:53000
