--- a/root/etc/unbound/unbound.conf
+++ b/root/etc/unbound/unbound.conf
@@ -24,6 +24,7 @@ server:
 forward-zone:
   name: "."
   # unbound is using port 53, so dnscrypt needs to use a different port
+  forward-addr: ::1@53000
   forward-addr: 127.0.0.1@53000
 
 # all old issues are gone; maybe try wayback
