Rifle - Open cbz with pqiv

--- a/media/.config/ranger/rifle.conf
+++ b/media/.config/ranger/rifle.conf
@@ -53,7 +53,7 @@ ext exe = wine "$1"
 # needs higher precedence than archives
 ext jar, flag f = java -jar "$1"
 # TODO can detect that an archive contains images?
-ext cbr|zip, flag f = tdrop -a auto_hide && pqiv -n "$1" && tdrop -a auto_show
+ext cbz|cbr|zip, flag f = tdrop -a auto_hide && pqiv -n "$1" && tdrop -a auto_show
 
 # archives
 ext 7z|ace|ar|arc|bz2?|cab|cpio|cpt|deb|dgc|dmg|gz, has atool = atool -l "$@" | "$PAGER"
