Kitty - Include computer-local config if present

--- a/terminal/.config/kitty/kitty.conf
+++ b/terminal/.config/kitty/kitty.conf
@@ -63,6 +63,9 @@ scrollback_pager vimpager
 # * Other
 shell zsh
 
+# * Local Config
+include ~/.config/kitty/kitty-local.conf
+
 # Local Variables:
 # eval: (rainbow-mode 1)
 # End:
