--- a/root/etc/systemd/system/resume@.service
+++ b/root/etc/systemd/system/resume@.service
@@ -8,7 +8,7 @@ Type=simple
 Environment=DISPLAY=:0
 # Fix button mapping after sleeping
 ExecStartPre=/usr/bin/env xinput --set-button-map "TPPS/2 IBM TrackPoint" 50 1 51
-ExecStart=/usr/bin/env xinput --set-button-map "ETPS/2 Elantech TrackPoint" 50 1 51
+ExecStart=/usr/bin/env xinput --set-button-map "Elan TrackPoint" 50 1 51
 Restart=always
 RestartSec=3
 
