Update old tf2 config files
Not really using, but trying to clean up uncomitted changes.

--- a/games/.local/share/Steam/steamapps/common/Team Fortress 2/tf/cfg/autoexec.cfg
+++ b/games/.local/share/Steam/steamapps/common/Team Fortress 2/tf/cfg/autoexec.cfg
@@ -1,3 +1,5 @@
+// Maybe look at https://github.com/tsumo/tf2configs/blob/master/autoexec.cfg
+// for fps related settings
 // * General Settings
 // fix most annoying default setting
 hud_fastswitch 1
@@ -24,6 +26,13 @@ tf_respawn_on_loadoutchanges 1
 // field of view (default: 75)
 // max is 90; can only increase further with wider resolution
 fov_desired 90
+
+// show total damage done
+// hud_combattext_batching 1
+
+// 
+// mat_phong 0
+// r_rimlight 0
 
 // * Mouse Settings
 // use raw mouse input
@@ -58,6 +67,8 @@ hud_medicautocallersthreshold 70
 
 // * General Keybindings
 // https://wiki.teamfortress.com/wiki/Scripting#List_of_key_names
+
+bind tab +showscores
 
 // medic call
 bind f "voicemenu 0 0"
