--- a/games/.local/share/Steam/steamapps/common/Team Fortress 2/tf/cfg/spy.cfg
+++ b/games/.local/share/Steam/steamapps/common/Team Fortress 2/tf/cfg/spy.cfg
@@ -30,3 +30,50 @@ bind 3 "sap_off; slot3"
 bind q "sap_off; slot3"
 bind 4 "sap_off; slot4"
 bind e "sap_off; slot4"
+
+// * Change Disguise
+// http://tf2wiki.net/wiki/Spy_scripts#Spy_Quick_Disguise_Scripts
+alias e_scout "disguise 1 -1"
+alias e_soldier "disguise 3 -1"
+alias e_pyro "disguise 7 -1"
+alias e_demoman "disguise 4 -1"
+alias e_hwguy "disguise 6 -1"
+alias e_engineer "disguise 9 -1"
+alias e_medic "disguise 5 -1"
+alias e_sniper "disguise 2 -1"
+alias e_spy "disguise 8 -1"
+
+alias a_scout "disguise 1 -2"
+alias a_soldier "disguise 3 -2"
+alias a_pyro "disguise 7 -2"
+alias a_demoman "disguise 4 -2"
+alias a_hwguy "disguise 6 -2"
+alias a_engineer "disguise 9 -2"
+alias a_medic "disguise 5 -2"
+alias a_sniper "disguise 2 -2"
+alias a_spy "disguise 8 -2"
+
+alias +quickspy "bind q e_scout; bind w e_soldier; bind e e_pyro; bind a e_demo; bind s e_hwguy; bind d e_engineer; bind z e_medic; bind x e_sniper; bind c e_spy"
+alias -quickspy "bind q slot3; bind w +mfwd; bind e slot4; bind a +mleft; bind s +mback; bind d +mright; bind z voice_menu_1; bind x voice_menu_2; bind c voice_menu_3"
+
+alias +quickspy2 "bind q a_scout; bind w a_soldier; bind e a_pyro; bind a a_demo; bind s a_hwguy; bind d a_engineer; bind z a_medic; bind x a_sniper; bind c a_spy"
+alias -quickspy2 "bind q slot3; bind w +mfwd; bind e slot4; bind a +mleft; bind s +mback; bind d +mright; bind z voice_menu_1; bind x voice_menu_2; bind c voice_menu_3"
+
+bind mouse4 +quickspy
+
+// * Change Disguise Weapon
+// http://forums.steampowered.com/forums/showthread.php?t=1591457
+// //disguise slot1
+// bind "[KEY]" +slot1_disguiser
+// alias +slot1_disguiser "slot1;lastdisguise"
+// alias -slot1_disguiser "lastinv"
+//
+// //disguise slot2
+// bind "[KEY]" +slot2_disguiser
+// alias +slot2_disguiser "slot2;lastdisguise"
+// alias -slot2_disguiser "lastinv"
+//
+// //disguise slot3
+// bind "[KEY]" +slot3_disguiser
+// alias +slot3_disguiser "slot3;lastdisguise"
+// alias -slot3_disguiser "lastinv"/ better disguising
