Fix xrestart and dunstrun
Dunstrun and rldxcape weren't working correctly because $! ends up being the
incorrect pid. Create blacklist beforehand and then store new pid that isn't in
blacklist instead.

Also refactor padding functionality into padding.sh.

--- a/startup/.bxinitrc
+++ b/startup/.bxinitrc
@@ -122,7 +122,7 @@ wal -R
 redshift &
 
 # notifications
-dunst &
+dunstrun &
 
 # notifications when mpd song changes
 # https://github.com/vehk/mpdnotify works well with mpdcron also
