--- a/startup/.nvidia-xinitrc
+++ b/startup/.nvidia-xinitrc
@@ -1,6 +1,3 @@
-# shellcheck disable=SC1090
-. ~/bin/helpers/monitor.sh
-
 # set laptop screen to primary monitor (so setroot and redshift recognize it as
 # the primary monitor/output); this is not the default when using nvidia-xrun
 
@@ -11,7 +8,7 @@
 # this is required for redshift to recognize laptop screen as crtc 0 at all
 
 # this assumes no outputs are plugged in when starting X
-xrandr --output "$(monitor_get_primary)" --primary
+xrandr --output "$(xrandr --listmonitors | awk '/0:/ {print $NF}')" --primary
 
 ./.xinitrc
 
