yshui Compton fork has been renamed to Picom

--- a/aesthetics/.config/picom.conf
+++ b/aesthetics/.config/picom.conf
@@ -1,18 +1,17 @@
-# arch repos use https://github.com/yshui/compton
-# arch default config: /etc/xdg/compton.conf
-# https://wiki.archlinux.org/index.php/compton
+# arch default config: /etc/xdg/picom.conf
+# https://wiki.archlinux.org/index.php/picom
 # https://github.com/chjj/compton/wiki/vsync-guide
 # https://github.com/chjj/compton/wiki/perf-guide
 
 # see manpage for up to date, detailed descriptions of settings
 # a lot of settings have been deprecated
 # defaults still need improvement
-# https://github.com/yshui/compton/issues/132
-# https://github.com/yshui/compton/issues/97#issuecomment-458719856
-# https://github.com/yshui/compton/issues/37
+# https://github.com/yshui/picom/issues/132
+# https://github.com/yshui/picom/issues/97#issuecomment-458719856
+# https://github.com/yshui/picom/issues/37
 
 # TODO
-# - https://github.com/yshui/compton/issues/32
+# - https://github.com/yshui/picom/issues/32
 
 # * General
 backend = "glx";
