Start using wpgtk

--- a/aesthetics/.config/gtk-3.0/settings.ini
+++ b/aesthetics/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Numix
+gtk-theme-name=FlatColor
 gtk-icon-theme-name=Numix
 gtk-font-name=Cantarell 11
 gtk-cursor-theme-size=0
