--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -66,8 +66,7 @@ map ud shell trash-restore
 # just change wallpaper; ~/bin/bgset
 map cb shell bgset -z %d/%f &> /dev/null &
 # change and store wallpaper and set theme with wal; see ~/bin/walset
-# nohup because walset command will mess up input otherwise
-map cw shell nohup walset --store -z %f &> /dev/null &
+map cw shell -sf walset --store --zoom %f
 
 # image magick
 # change rotation; image rotate with imagemagick
