Picom - Fix Emacs opacity rule
Some frames previously were not transparent.

--- a/aesthetics/.config/picom.conf
+++ b/aesthetics/.config/picom.conf
@@ -37,7 +37,10 @@ shadow-exclude = [
 
 # * Opacity
 # make Emacs slightly transparent
-opacity-rule = [ "90:class_g = 'Emacs'" ];
+opacity-rule = [
+    "90:class_g = 'Emacs'",
+    "90:class_g = 'emacs'"
+];
 
 # * Blurring
 # blur background of transparent windows
